# libconviqt

./: .gitignore  .travis.yml  IScalm2TOD.cc  IScalm2TOD_module.cc  LICENSE  Makefile  Makefile.am  Makefile.carver  Makefile.edison  Makefile.hopper  Makefile.in  README.md  README.text  almread.hpp  cmult.cc  configure.ac  configure.hpcp  configure.hpcp-dbg  configure.knl  configure.reijo  configure.reijo.osx  injector.cpp  injector.hpp  levels_facilities.h  tod2tod.cc  tod2tod_module.cc
data/: LFI_FPDB_DX11D_R2.2.fits  Makefile.am  Makefile.in  mb_lfi_30_27_x_rescaled.alm  slm.fits
levels/: Makefile.am  Makefile.in
levels/Healpix_cxx/: Makefile.am  Makefile.in  alm.cc  alm_fitsio.cc  alm_powspec_tools.cc  ls_alm.h  ls_alm_fitsio.h  ls_alm_powspec_tools.h  ls_powspec.h  powspec.cc
levels/Healpix_cxx/.deps/: alm.Plo  alm_fitsio.Plo  alm_powspec_tools.Plo  powspec.Plo
levels/c_utils/: Makefile.am  Makefile.in  parser.c  parser.h  svd_c.c  svd_c.h  time_utils.c  time_utils.h  wrec3a.c  wrec3a.h
levels/cxxsupport/: Makefile.am  Makefile.in  announce.cc  ddl.cc  ephemerides.cc  ephemerides.h  error_handling.cc  fitshandle.cc  focalplane_db.cc  focalplane_db.h  font_data.inc  io_utils.cc  io_utils.h  iohandle.cc  iohandle.h  iohandle_current.cc  iohandle_current.h  iohandle_dmc.cc  iohandle_dmc.h  iohandle_fits.cc  iohandle_fits.h  iohandle_helpers.h  levels_facilities.h  ls_alloc_utils.h  ls_arr.h  ls_constants.h  ls_datatypes.h  ls_error_handling.h  ls_fftpack_support.h  ls_fitshandle.h  ls_math_utils.h  ls_mpi_support.h  ls_openmp_support.h  ls_rng.h  ls_rotmatrix.h  ls_safe_cast.h  ls_share_utils.h  ls_sse_utils_cxx.h  ls_string_utils.h  ls_vec3.h  (+11 more)
levels/libfftpack/: Makefile.am  Makefile.in  ffttest.c  planck.make
m4/: acx_cfitsio.m4  acx_healpix_cxx.m4  ax_cxx_compile_stdcxx_11.m4  ax_prog_cc_mpi.m4  ax_prog_cxx_mpi.m4
old-src/: IScalm2TOD_module.cc  almread.cpp  cmult_module.cc  injector.cpp  injector.hpp  tod2tod_module.cc
python/: setup.py
python/libconviqt_wrapper/: __init__.py
python/tests/: __init__.py  test_libconviqt.py
src/: Makefile.am  Makefile.in  cconviqt.cpp  cconviqt.h  conviqt.hpp  conviqt_io.cpp  conviqt_math.cpp  conviqt_util.cpp  test_libcconviqt.c  test_libconviqt.cpp  test_libconviqt.py  test_libconviqt_mpi.cpp  wignercalc.cpp
