AM_CPPFLAGS = $(CFITSIO_CPPFLAGS)
AM_CXXFLAGS = $(OPENMP_CXXFLAGS)
LDADD = $(CFITSIO) $(OPENMP_CXXFLAGS)

#include_HEADERS = alloc_utils.h bstream.h ephemerides.h fitshandle.h io_utils.h iohandle_dmc.h levels_facilities.h math_utils.h openmp_support.h pointing.h rangeset.h safe_ptr.h se_utils_cxx.h vec3.h xcomplex.h announce.h cxxutils.h error_handling.h focalplane_db.h iohandle.h iohandle_fits.h ls_image.h mmap_handle.h paramfile.h psort.h rotmatrix.h share_utils.h string_utils.h walltimer.h arr.h datatypes.h fftpack_support.h geom_utils.h	iohandle_current.h iohandle_helpers.h lsconstants.h mpi_support.h planck_rng.h quaternion.h safe_cast.h sort_utils.h trafos.h wigner.h

lib_LTLIBRARIES = libc_util.la
libc_util_la_SOURCES = c_utils.c c_utils.h memusage.c memusage.h sse_utils.h svd_c.c svd_c.h time_utils.c time_utils.h walltime_c.c walltime_c.h wrec3a.c wrec3a.h

# parser.c parser.h
