AM_CPPFLAGS = $(CFITSIO_CPPFLAGS)
LDADD = $(CFITSIO)

#include_HEADERS = c_utils.h memusage.h sse_utils.h svd_c.c svd_c.h time_utils.h walltime_c.h wrec3a.h

lib_LTLIBRARIES = libc_utils.la
libc_utils_la_SOURCES = c_utils.c c_utils.h memusage.c memusage.h sse_utils.h svd_c.c svd_c.h time_utils.c time_utils.h walltime_c.c walltime_c.h wrec3a.c wrec3a.h

# This didn't compile
# parser.c parser.h
